# ragcli

./: CLAUDE.md  Cargo.toml  README.md
samples/: coffee-brewing.txt  family.txt  mars-exploration.txt
src/: chunker.rs  config.rs  main.rs
src/embedding/: mod.rs  ollama.rs
src/llm/: mod.rs  ollama.rs
src/parser/: code.rs  docx.rs  excel.rs  mod.rs  pdf.rs  plain_text.rs  xml.rs
src/store/: mod.rs  sqlite.rs
