[package]
name = "ragcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pdf-extract = "0.12.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
